--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,6 +43,6 @@ jobs:
         --detect.project.version.name=1.0.0 \
         --detect.blackduck.signature.scanner.snippet.matching=SNIPPET_MATCHING \
         --detect.blackduck.signature.scanner.upload.source.mode=true \
-        --detect.clone.project.version.latest=true
-        --detect.pip.requirements.path=requirements.txt
+        --detect.clone.project.version.latest=true \
+        --detect.pip.requirements.path=requirements.txt \
         --detect.project.version.distribution=SAAS
